--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,12 @@ dist.jar=${dist.dir}/Szakdolgozat.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.hsqldb.jar=../../../hsqldb/lib/hsqldb.jar
+file.reference.hsqldb.jar-1=../../../Desktop/hsqldb/lib/hsqldb.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.hsqldb.jar}
+    ${file.reference.hsqldb.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
