--- a/Server/nbproject/private/private.properties
+++ b/Server/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.hsqldb.jar=C:\\Users\\Adrienn\\Desktop\\hsqldb\\lib\\hsqldb.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\Adrienn\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
